--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Provjera dijabetesa</title>
+    <title>Diabetes Predictor</title>
     <script src="/scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
