--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diabetes Predictor</title>
+    <title>Prediktor rizika od dijabetesa</title>
     <script src="/scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <h1>Dijabetes</h1>
-    <p class="uvod"></p>
+    <h1>Prediktor rizika od dijabetesa</h1>
+    <p class="uvod"></p><br>
     
     <section class="diabetes-types">
         <h2>Tipovi dijabetesa</h2>
@@ -39,7 +39,7 @@
                     od razvoja dijabetesa tipa 2 u budućnosti.</p>
             </div>
         </details>
-    </section>
+    </section><br>
 
     <h2> Provjera rizika od dijabetesa</h2>
 
